# back/src/main/java/com/ynov/fantasy_world/domain/dto/AventurierImpacteInfo.java
@@ -1,0 +1,12 @@
+package com.ynov.fantasy_world.domain.dto;
+
+import lombok.Data;
+
+import java.util.List;
+
+@Data
+public class AventurierImpacteInfo {
+    private Long id;
+    private String nom;
+    private List<String> prerequisManquants;
+}
